topics/service-ingress/service.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-rest-service-svc
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    service-pod: simple-rest-service-pod
  sessionAffinity: None
  type: NodePort
